cluster/apps/networking/adguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app adguard
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: *app
          image: adguard/adguardhome:v0.107.27
          imagePullPolicy: Always
          volumeMounts:
            - name: adguard-work-volume
              mountPath: /opt/adguardhome/work
            - name: adguard-conf-volume
              mountPath: /opt/adguardhome/conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: adguard-work-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/adguard/adguard-work-volume
        - name: adguard-conf-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/adguard/adguard-conf-volume
