cluster/apps/networking/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app adguard
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    metallb.universe.tf/loadBalancerIPs: "${ADGUARD_ADDR_202}, ${ADGUARD_ADDR_0}"
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      name: adguard-gui
      port: 80
      targetPort: 80
    - protocol: TCP
      name: adguard-tcp
      port: 53
      targetPort: 53
    - protocol: UDP
      name: adguard-udp
      port: 53
      targetPort: 53
